# Memento

./: .env.example  .eslintrc.cjs  .gitignore  .lefthook.yml  AGENT_REVIEW_FINDINGS.md  CONTRIBUTING.md  Cargo.toml  FILTER_SCHEMA_UPDATE.md  FILTER_SCHEMA_UPDATE_IMPLEMENTATION.md  GIT_HOOKS_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  LEFTHOOK_GUIDE.md  LEFTHOOK_QUICK_REFERENCE.md  LEFTHOOK_README.md  LEFTHOOK_SETUP_SUMMARY.md  LEFTHOOK_VERIFICATION_CHECKLIST.md  LOGGING_UPDATE_SUMMARY.md  OPTIMIZATION_COMPLETE.md  README.md  SETUP_COMPLETE.md  STREAMING_AND_ERROR_HANDLING.md  STREAMING_ARCHITECTURE_GUIDE.md  architecture.md  build_check.txt  build_dev.txt  build_release.txt  check.txt  install-lefthook.ps1  package-lock.json  package.json  query  setup-hooks.ps1  setup-hooks.sh
.cargo/: config.toml
.github/workflows/: _reusable-build-checks.yml  _reusable-e2e-tests.yml  _reusable-lint-checks.yml  _reusable-unit-tests.yml  ai-gateway-deploy.yml  build-release.yml  ci-tier1-pr.yml  ci-tier2-staging.yml  ci-tier3-test.yml  ci-tier4-main.yml
.lefthook/: check-file-size.ps1  check-permissions.ps1  detect-secrets.ps1  full-lint.ps1  validate-branch.ps1  validate-commit-msg.ps1
agents/: .env.example  ARCHITECTURE.md  CODE_EXAMPLES.md  COMPLETION_CHECKLIST.md  DOCUMENTATION_INDEX.md  FLOW_DIAGRAMS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README_REFACTORING.md  REFACTOR.md  REPLANNING_MECHANISM.md  SUMMARY.md  VISUAL_SUMMARY.md  package-lock.json  package.json  tsconfig.json
agents/src/: agent.ts  agentState.ts  clarifyAndRewrittenNode.ts  intentRouterNode.ts  server.ts
ai-gateway/: .dockerignore  .env.example  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  Dockerfile  EC2_DEPLOYMENT_STEPS.md  README.md  deploy-to-ec2.ps1  deploy.sh  docker-compose.production.yml  docker-compose.yml  drizzle.config.ts  nginx.conf  nginx.conf.template  package-lock.json  package.json  setup-domain.sh  tsconfig.json
ai-gateway/migrations/: 0000_init_base_tables.sql  0004_add_session_and_google_auth.sql  0004_simplify_schema.sql
ai-gateway/src/: config.ts  modelRouter.ts  rateLimiter.ts  server.ts  types.ts  usageTracker.ts
app/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/agents/: package-lock.json  package.json  tsconfig.json
app/frontend/: eslint.config.mjs  instrumentation-client.ts  mock.ts  next.config.ts  package.json  (+5 more)
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: api.rs  build_info.rs  disk_usage.rs  get_app_icon.rs  get_device_id.rs  lib.rs  main.rs  oauth.rs  velopack.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: build_info.rs  lib.rs  main.rs  service.rs  ui_events.rs
crates/daemon/src/algorithms/: clustering_algorithm.rs  mod.rs
crates/daemon/src/browser_utils/: windows.rs
crates/daemon/src/cache/: cache.rs  mod.rs  ocr_cache.rs  persistent_cache.rs  phash.rs
crates/daemon/src/core/: config.rs  lifecycle.rs  mod.rs  priority.rs  shutdown.rs
crates/daemon/src/dedup/: cache.rs  db_index.rs  mod.rs  phash.rs
crates/daemon/src/embedding/: async_engine.rs  engine.rs  mod.rs  model_downloader.rs  model_watcher.rs
crates/daemon/src/ipc/: protocol.rs  server.rs
crates/daemon/src/llms/: llm.rs  mini.rs  mod.rs  phi3.rs  prompts.rs  types.rs
crates/daemon/src/llms/gliner/: tokenizer.json
crates/daemon/src/logging/: mod.rs
crates/daemon/src/ocr/: engine.rs  loader.rs  mod.rs  ocr_filter.rs  windows.rs
crates/daemon/src/pipeline/: capture.rs  cloud_ocr.rs  framer.rs  gate.rs  memory_process.rs  mod.rs  monitor.rs  ocr_processing.rs  processing_ocr_results.rs  processor.rs  worker.rs
crates/daemon/src/query/: mod.rs  query_processing.rs
crates/daemon/src/server/: app_state.rs  chat_endpoints.rs  disk_usage.rs  emitter.rs  mod.rs  model_endpoints.rs  privacy.rs  privacy_endpoints.rs  search_stream_handler.rs  search_tool.rs  search_web.rs  server.rs  skill_endpoints.rs  storage_endpoints.rs  system_endpoints.rs  types.rs
crates/daemon/src/text/: chunker.rs  cleaner.rs  mod.rs
crates/daemon/src/throttle/: adaptive_scheduler.rs  cpu_monitor.rs  mod.rs
crates/daemon/tests/: capture_tests.rs  main.rs
crates/daemon/tests/test_capture_images/: test_capture_images.json
crates/service-helper/: Cargo.toml  build.rs  service-helper.manifest  service-helper.rc
crates/service-helper/src/: main.rs
docs/: AGENT_ARCHITECTURE.md  CI_WATERFALL.md  WINDOWS_SERVICE_ARCHITECTURE.md
logs/: daemon.log.2026-02-14  daemon.log.2026-02-15
memento-product-site/: package-lock.json  package.json
migrations/: 001_init.sql  002_privacy_masking.sql  003_messages.sql  004_chats.sql  006_chat_summaries.sql  007_message_followups.sql
mintlify/: changelog.mdx  introduction.mdx  mint.json
scripts/: build-release.ps1
shared/: errors.ts  package-lock.json  package.json  portUrlResolver.ts  tsconfig.json
velopack-output/: RELEASES  assets.win.json  releases.win.json
(+300 files in other folders)
