[package]
name = "app_core"
version = "0.1.0"
edition = "2021"


[dependencies]
bytemuck = "1.25.0"
chrono = "0.4.43"
dirs = "5"
futures = "0.3.31"
image = "0.25.9"
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "chrono",
  "migrate",
] }
sqlite-vec = "0.1.3"
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
tokio = "1.49.0"
tracing = "0.1.44"
serde_json = "1.0.149"
serde = "1.0.228"
