[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../core" }

active-win-pos-rs = "0.9.1"
image = "0.25.9"
sysinfo = "0.38.1"
xcap = "0.8.1"
rusqlite = "0.38.0"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams"] }
