[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../core" }

active-win-pos-rs = "0.9.1"
image = "0.25.9"
sysinfo = "0.38.1"
xcap = "0.8.1"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams"] }
named_pipe = "0.4"
regex = "1.12.3"
once_cell = "1.21.3"
blake3 = "1.8.3"
bytemuck = "1.25.0"
anyhow = "1.0.101"
chrono-english = "0.1.8"
aho-corasick = "1.1.4"
serde = "1.0.228"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["json", "multipart", "stream", "blocking"] }
image-compare = "0.5.0"
uiautomation = "0.24.3"
futures = "0.3.31"
rstar = "0.12.2"
strsim = "0.11.1"
euclid = "0.22.13"
itertools = "0.14.0"
serde_json = "1.0.149"
tempfile = "3.25.0"
uuid = "1.20.0"
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "chrono",
  "migrate",
] }
sqlite-vec = "0.1.3"
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
fuzzy-matcher = "0.3.7"

futures-util = "0.3.32"
rdev = "0.5.3"
axum = "0.8.8"
dotenv = "0.15.0"
async-stream = "0.3"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

futures-core = "0.3"
tokio-stream = "0.1.18"
fastembed = "5.11.0"
image_hasher = "3.1.1"
base64 = "0.22.1"
url = "2.5.8"
textwrap = "0.16.2"
